--- a/Caso 1 Actividad Cooperativa artística Ground Zero/HTML/2.html
+++ b/Caso 1 Actividad Cooperativa artística Ground Zero/HTML/2.html
@@ -1,35 +1,44 @@
-<!DOCTYPE html>
++<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/e7fb34b24b.js" crossorigin="anonymous"></script>
     <link href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\IMG\iconopag2.png" rel="icon" type="image/png">
-    <link href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\CSS\Styles.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <link href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\CSS\estilopag2.css" rel="stylesheet">
     <title>Nuestra Mision</title>
 </head>
 <body>
-    <div class="menu-container">
-        <div class="logo">
-            <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\1.html">
-                <img src="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\IMG\4f7f831d8b2b9be55ab2366eaaf32f77.jpeg" width="200px" height="100px" alt="logo de la cooperativa">
-            </a> </div>
-        <div class="menu_opciones">
-            <ul>
-                <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\1.html">
-                    <li>Inicio</li>
+    <header class="header">
+        <div class="container">
+            <nav class="nav fixed-top">
+                <a href="#" class="logo nav-link2" aria-label="Logo de la cooperativa">
+                    <img src="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\IMG\4f7f831d8b2b9be55ab2366eaaf32f77.jpeg" title="logo">
                 </a>
-                <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\2.html">
-                    <li>Misión</li>
-                </a>
-                <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\3.html">
-                    <li>Galería</li>
-                </a>
-            </ul>
+                <button class="nav-toggle" aria-label="Abrir menú">
+                    <i class="fa-solid fa-bars"></i>
+                </button>
+                <ul class="nav-menu nav-menu_visible">
+                    <li class="nav-menu-item">
+                        <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\1.html" class="nav-menu-link nav-link2 nav-menu-link_active">Inicio</a>
+                    </li>
+                    <li class="nav-menu-item">
+                        <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\2.html" class="nav-menu-link nav-link2 nav-menu-link_active">Misión</a>
+                    </li>
+                    <li class="nav-menu-item">
+                        <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\3.html" class="nav-menu-link nav-link2 nav-menu-link_active">Galería</a>
+                    </li>
+                    <li class="nav-menu-item">
+                        <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\4.html" class="nav-menu-link nav-link2 nav-menu-link_active">Formulario</a>
+                    </li>
+                    <li class="nav-menu-item">
+                        <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\5.html" class="nav-menu-link nav-link2 nav-menu-link_active">Mapa</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        </div>
+    </header>
     <div class="content-container">
         <div class="mision"></div>
         <h1>Misión</h1>
@@ -88,5 +97,9 @@
                 </div>
             </footer>
         </div>
+        <script src="https://kit.fontawesome.com/e7fb34b24b.js" crossorigin="anonymous"></script>
+        <script defer src="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\JS\2.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+
 </body>
 </html>
