--- a/Caso 1 Actividad Cooperativa artística Ground Zero/HTML/3.html
+++ b/Caso 1 Actividad Cooperativa artística Ground Zero/HTML/3.html
@@ -4,32 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/e7fb34b24b.js" crossorigin="anonymous"></script>
     <link href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\IMG\galeriaicono.png" rel="icon" type="image/png">
-    <link href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\CSS\Styles.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <link href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\CSS\estilopag3.css" rel="stylesheet">
     <title>Galería</title>
 </head>
 <body>
-    <div class="menu-container">
-        <div class="logo">
-            <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\1.html">
-                <img src="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\IMG\4f7f831d8b2b9be55ab2366eaaf32f77.jpeg" width="200px" height="100px" alt="logo de la cooperativa">
-            </a> </div>
-        <div class="menu_opciones">
-            <ul>
-                <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\1.html">
-                    <li>Inicio</li>
-                </a>
-                <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\2.html">
-                    <li>Misión</li>
-                </a>
-                <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\3.html">
-                    <li>Galería</li>
-                </a>
+    <header class="header">
+        <nav class="nav">
+            <a href="#" class="logo nav-link" aria-label="Logo de la cooperativa">
+                <img src="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\IMG\4f7f831d8b2b9be55ab2366eaaf32f77.jpeg" title="logo">
+            </a>
+            <button class="nav-toggle" aria-label="Abrir menú">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+            <ul class="nav-menu nav-menu_visible">
+                <li class="nav-menu-item">
+                    <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\1.html" class="nav-menu-link nav-link nav-menu-link_active">Inicio</a>
+                </li>
+                <li class="nav-menu-item">
+                    <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\2.html" class="nav-menu-link nav-link nav-menu-link_active">Misión</a>
+                </li>
+                <li class="nav-menu-item">
+                    <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\3.html" class="nav-menu-link nav-link nav-menu-link_active">Galería</a>
+                </li>
+                <li class="nav-menu-item">
+                    <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\4.html" class="nav-menu-link nav-link nav-menu-link_active">Formulario</a>
+                </li>
+                <li class="nav-menu-item">
+                    <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\5.html" class="nav-menu-link nav-link nav-menu-link_active">Mapa</a>
+                </li>
             </ul>
-        </div>
-    </div>
+        </nav>
+    </header>
     <div class="fotos-container">
         <div class="foto1">
             <img src="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\IMG\Esculturas\recicladocalamar-tapas-01.jpg" title="CALAMUS ♳ PET">
@@ -101,5 +107,7 @@
             </div>
         </footer>
     </div>
+    <script defer src="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\JS\3.js"></script>
+    <script src="https://kit.fontawesome.com/e7fb34b24b.js" crossorigin="anonymous"></script>
 </body>
 </html>
