--- a/Caso 1 Actividad Cooperativa artística Ground Zero/HTML/1.html
+++ b/Caso 1 Actividad Cooperativa artística Ground Zero/HTML/1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\IMG\miniatura.png" rel="icon" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\CSS\estilopag1.css" rel="stylesheet">
+    <link href="C:\Users\j98fu\OneDrive\Documentos\GitHub\Exp1_Fuentes\Caso 1 Actividad Cooperativa artística Ground Zero\CSS\estilopag1.css" rel="stylesheet">
     <title>Ground Zero</title>
 </head>
 <body>
@@ -14,27 +14,27 @@
     <header class="header">
         <div class="container">
             <nav class="nav fixed-top">
-                <a href="#" class="logo nav-link2   " aria-label="Logo de la cooperativa">
-                    <img src="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\IMG\4f7f831d8b2b9be55ab2366eaaf32f77.jpeg" title="logo">
+                <a href="C:\Users\j98fu\OneDrive\Documentos\GitHub\Exp1_Fuentes\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\1.html" class="logo nav-link2" aria-label="Logo de la cooperativa">
+                    <img src="C:\Users\j98fu\OneDrive\Documentos\GitHub\Exp1_Fuentes\Caso 1 Actividad Cooperativa artística Ground Zero\IMG\4f7f831d8b2b9be55ab2366eaaf32f77.jpeg" title="logo">
                 </a>
                 <button class="nav-toggle" aria-label="Abrir menú">
                     <i class="fa-solid fa-bars"></i>
                 </button>
                 <ul class="nav-menu nav-menu_visible">
                     <li class="nav-menu-item">
-                        <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\1.html" class="nav-menu-link nav-link2 nav-menu-link_active">Inicio</a>
+                        <a href="C:\Users\j98fu\OneDrive\Documentos\GitHub\Exp1_Fuentes\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\1.html" class="nav-menu-link nav-link2 nav-menu-link_active">Inicio</a>
                     </li>
                     <li class="nav-menu-item">
-                        <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\2.html" class="nav-menu-link nav-link2 nav-menu-link_active">Misión</a>
+                        <a href="C:\Users\j98fu\OneDrive\Documentos\GitHub\Exp1_Fuentes\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\2.html" class="nav-menu-link nav-link2 nav-menu-link_active">Misión</a>
                     </li>
                     <li class="nav-menu-item">
-                        <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\3.html" class="nav-menu-link nav-link2 nav-menu-link_active">Galería</a>
+                        <a href="C:\Users\j98fu\OneDrive\Documentos\GitHub\Exp1_Fuentes\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\3.html" class="nav-menu-link nav-link2 nav-menu-link_active">Galería</a>
                     </li>
                     <li class="nav-menu-item">
-                        <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\4.html" class="nav-menu-link nav-link2 nav-menu-link_active">Formulario</a>
+                        <a href="C:\Users\j98fu\OneDrive\Documentos\GitHub\Exp1_Fuentes\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\4.html" class="nav-menu-link nav-link2 nav-menu-link_active">Formulario</a>
                     </li>
                     <li class="nav-menu-item">
-                        <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\5.html" class="nav-menu-link nav-link2 nav-menu-link_active">Mapa</a>
+                        <a href="C:\Users\j98fu\OneDrive\Documentos\GitHub\Exp1_Fuentes\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\5.html" class="nav-menu-link nav-link2 nav-menu-link_active">Mapa</a>
                     </li>
                 </ul>
             </nav>
