--- a/Caso 1 Actividad Cooperativa artística Ground Zero/HTML/4.html
+++ b/Caso 1 Actividad Cooperativa artística Ground Zero/HTML/4.html
@@ -4,65 +4,124 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\CSS\estilopag4.css" rel="stylesheet">
+    <link href="C:\Users\j98fu\OneDrive\Documentos\GitHub\Exp1_Fuentes\Caso 1 Actividad Cooperativa artística Ground Zero\CSS\estilopag4.css" rel="stylesheet">
     <title>Formulario</title>   
 </head>
 <body>
-    
-    <header class="header">
+<header class="header">
         <div class="container">
             <nav class="nav fixed-top">
-                <a href="#" class="logo nav-link2   " aria-label="Logo de la cooperativa">
-                    <img src="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\IMG\4f7f831d8b2b9be55ab2366eaaf32f77.jpeg" title="logo">
+                <a href="C:\Users\j98fu\OneDrive\Documentos\GitHub\Exp1_Fuentes\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\1.html" class="logo nav-link2" aria-label="Logo de la cooperativa">
+                    <img src="C:\Users\j98fu\OneDrive\Documentos\GitHub\Exp1_Fuentes\Caso 1 Actividad Cooperativa artística Ground Zero\IMG\4f7f831d8b2b9be55ab2366eaaf32f77.jpeg" title="logo">
                 </a>
                 <button class="nav-toggle" aria-label="Abrir menú">
                     <i class="fa-solid fa-bars"></i>
                 </button>
                 <ul class="nav-menu nav-menu_visible">
                     <li class="nav-menu-item">
-                        <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\1.html" class="nav-menu-link nav-link2 nav-menu-link_active">Inicio</a>
+                        <a href="C:\Users\j98fu\OneDrive\Documentos\GitHub\Exp1_Fuentes\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\1.html" class="nav-menu-link nav-link2 nav-menu-link_active">Inicio</a>
                     </li>
                     <li class="nav-menu-item">
-                        <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\2.html" class="nav-menu-link nav-link2 nav-menu-link_active">Misión</a>
+                        <a href="C:\Users\j98fu\OneDrive\Documentos\GitHub\Exp1_Fuentes\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\2.html" class="nav-menu-link nav-link2 nav-menu-link_active">Misión</a>
                     </li>
                     <li class="nav-menu-item">
-                        <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\3.html" class="nav-menu-link nav-link2 nav-menu-link_active">Galería</a>
+                        <a href="C:\Users\j98fu\OneDrive\Documentos\GitHub\Exp1_Fuentes\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\3.html" class="nav-menu-link nav-link2 nav-menu-link_active">Galería</a>
                     </li>
                     <li class="nav-menu-item">
-                        <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\4.html" class="nav-menu-link nav-link2 nav-menu-link_active">Formulario</a>
+                        <a href="C:\Users\j98fu\OneDrive\Documentos\GitHub\Exp1_Fuentes\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\4.html" class="nav-menu-link nav-link2 nav-menu-link_active">Formulario</a>
                     </li>
                     <li class="nav-menu-item">
-                        <a href="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\5.html" class="nav-menu-link nav-link2 nav-menu-link_active">Mapa</a>
+                        <a href="C:\Users\j98fu\OneDrive\Documentos\GitHub\Exp1_Fuentes\Caso 1 Actividad Cooperativa artística Ground Zero\HTML\5.html" class="nav-menu-link nav-link2 nav-menu-link_active">Mapa</a>
                     </li>
                 </ul>
             </nav>
         </div>
-    </header>
-    <form class="cform" id="formulario">
-        <label for="nombres">Nombres: </label>
-        <input type="text" id="nombres" name="nombres" minlength="3" maxlength="20" required><br>
-        <label for="ap">Apelido Paterno: </label>
-        <input type="text" id="ap" name="apellidopaterno" minlength="3" maxlength="20" required><br>
-        <label for="am">Apellido Materno: </label>
-        <input type="text" id="am" name="apellidomaterno" minlength="3" maxlength="20" required><br>
-        <label for="genero">Genero: </label>
-        <select id="genero" name="genero" required>
-            <option selected value="----">------------</option>
-            <option value="masculino">Masculino</option>
-            <option value="femenino">Femenino</option>
-            <option value="nobinario">No Binario</option>
-            <option value="otro">Otro</option>
-        </select><br>   
-        <label for="rut">Rut:</label>
-        <input type="text" id="rut" name="rut" minlength="9" maxlength="10" required><br>
-        <label for="direction">Dirección: </label>
-        <input type="text" id="direction" name="direction" required><br>
-        <label for="email">Correo Electrónico: </label>
-        <input type="email" id="email" name="email" required><br>
-        <label for="phone">Número de teléfono: </label>
-        <input type="phone" id="phone" name="phone" minlength="9" maxlength="12" required><br>
-        <input type="submit" id="enviar" name="submit" value="Enviar Formulario" onclick=" return enviarFormulario()">
+</header>
+<main>
+    <form action="" class="formulario" id="formulario">
+        <div class="formulario__grupo" id="grupo__nombres">
+            <label for="nombres" class="formulario__label">Nombres: </label>
+            <div class="formulario__grupo-input">
+                <input type="text" class="formulario__input" id="nombres" name="nombres" placeholder="Homero">
+                <i class="formulario__validacion-estado fa-solid fa-circle-xmark"></i>
+            </div>
+            <p class="formulario__input-error">Los nombres sólo deben contener letras</p>
+        </div>
+        <div class="formulario__grupo" id="grupo__ap">
+            <label for="ap" class="formulario__label">Apelido Paterno: </label>
+            <div class="formulario__grupo-input">
+                <input type="text" class="formulario__input" id="ap" name="apellidopaterno" placeholder="Jay">
+                <i class="formulario__validacion-estado fa-solid fa-circle-xmark"></i>
+            </div>
+            <p class="formulario__input-error">Los nombres sólo deben contener letras</p>
+        </div>
+        <div class="formulario__grupo" id="grupo__am">
+            <label for="am" class="formulario__label">Apellido Materno: </label>
+            <div class="formulario__grupo-input">
+                <input type="text" id="am"  class="formulario__input" name="apellidomaterno" placeholder="Simpson">
+                <i class="formulario__validacion-estado fa-solid fa-circle-xmark"></i>
+            </div>
+            <p class="formulario__input-error">Los nombres sólo deben contener letras</p>
+        </div>
+        <div class="formulario__grupo" id="grupo__genero">
+            <label for="genero" class="formulario__label">Genero: </label>
+            <div class="formulario__grupo-input">
+                <select id="genero" name="genero">
+                    <option selected value="----">------------</option>
+                    <option value="masculino">Masculino</option>
+                    <option value="femenino">Femenino</option>
+                    <option value="nobinario">No Binario</option>
+                    <option value="otro">Otro</option>
+                </select>
+                <i class="formulario__validacion-estado fa-solid fa-circle-xmark"></i>
+            </div>
+            <p class="formulario__input-error">Los nombres sólo deben contener letras</p>
+        </div>  
+        <div class="formulario__grupo" id="grupo__rut">
+            <label for="rut" class="formulario__label">Rut:</label>
+            <div class="formulario__grupo-input">
+                <input type="text" id="rut" name="rut" placeholder="19.878.057-k" class="formulario__input">
+                <i class="formulario__validacion-estado fa-solid fa-circle-xmark"></i>
+            </div>
+            <p class="formulario__input-error">Los nombres sólo deben contener letras</p>
+        </div>
+        <div class="formulario__grupo" id="grupo__direccion">
+            <label for="direccion" class="formulario__label">Dirección: </label>
+            <div class="formulario__grupo-input">
+                <input type="text" id="direccion" name="direccion" placeholder="SiempreViva 742" class="formulario__input">
+                <i class="formulario__validacion-estado fa-solid fa-circle-xmark"></i>
+            </div>
+            <p class="formulario__input-error">Los nombres sólo deben contener letras</p>
+        </div>
+        <div class="formulario__grupo" id="grupo__email">
+            <label for="email" class="formulario__label">Correo Electrónico: </label>
+            <div class="formulario__grupo-input">
+                <input type="email" id="email" name="email" placeholder="correo@duocuc.cl" class="formulario__input">
+                <i class="formulario__validacion-estado fa-solid fa-circle-xmark"></i>
+            </div>
+        </div>
+        <div class="formulario__grupo" id="grupo__phone">
+            <label for="phone" class="formulario__label">Número de teléfono: </label>
+            <div class="formulario__grupo-input">
+                <input type="phone" id="phone" name="phone" placeholder="+56964144145" class="formulario__input">
+                <i class="formulario__validacion-estado fa-solid fa-circle-xmark"></i>
+            </div>
+        </div>
+        <div class="formulario__grupo formulario__grupo-terminos" id="grupo__terminos">
+            <label class="formulario__label">
+                <input type="checkbox" class="formulario__checkbox" name="terminos" id="terminos" class="formulario__input">
+                Acepto los terminos y condiciones
+            </label>
+        </div>
+        <div class="formulario__mensaje" id="formulario__mensaje">
+            <p><i class="fa-solid fa-triangle-exclamation"></i> <b>Error:</b> Por favor, rellene el formulario correctamente.</p>
+        </div>
+        <div class="formulario__grupo formulario__grupo-btn-enviar">
+            <button type="submit" class="formulario__btn">Enviar</button>
+            <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado exitosamente!</p>
+        </div>    
     </form>
+</main>
     <div class="footer-container">
         <footer class="pie-pagina">
             <div class="g1">
@@ -100,7 +159,7 @@
             </div>
         </footer>
     </div>
-    <script defer src="C:\Users\j98fu\Downloads\Caso 1 Actividad Cooperativa artística Ground Zero-20230331T011935Z-001\Caso 1 Actividad Cooperativa artística Ground Zero\JS\4.js"></script>
+    <script defer src="C:\Users\j98fu\OneDrive\Documentos\GitHub\Exp1_Fuentes\Caso 1 Actividad Cooperativa artística Ground Zero\JS\4.js"></script>
     <script src="https://kit.fontawesome.com/e7fb34b24b.js" crossorigin="anonymous"></script>
 </body>
 </html>
