--- a/Caso 1 Actividad Cooperativa artística Ground Zero/HTML/5.html
+++ b/Caso 1 Actividad Cooperativa artística Ground Zero/HTML/5.html
@@ -38,6 +38,8 @@
         </div>
     </header>
     <div id="map"></div> 
+    <h1 style="font-family: Arial, sans-serif; color: #333; text-align: center; padding: 20px; background-color: #f5f5f5;">Puedes encontrar nuestra tienda ubicada aquí</h1>
+    <p style="font-family: Arial, sans-serif; font-size: 18px; color: #666; text-align: center;">¡Éxito en tus próximas compras de arte underground!</p>
     <div class="footer-container">
         <footer class="pie-pagina">
             <div class="g1">
